# litres_advanced_filters

./: .gitattributes  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.devcontainer/: devcontainer.json  post_create.sh
.github/workflows/: ci.yml  publish.yml
app/: __init__.py  middleware.py  start.py
app/config/: __init__.py  config.py
app/controllers/: __init__.py  admin.py  admin_panel.py  auth.py  catalog.py
app/db/: __init__.py  base.py  models.py
app/models/: __init__.py  catalog_query.py
app/scrapers/: __init__.py  arts.py  auth.py  author.py  book.py  catalog.py  client.py  genres.py  models.py  profile.py  series.py
app/services/: __init__.py  cards.py  catalog_service.py  genre_service.py  settings_service.py
app/sync/: __init__.py  __main__.py  bulk.py  common.py  genres.py  heal.py  ingest.py  logging_setup.py  profile.py
db/: env.py
db/versions/: 0001_initial_schema.py  1a80947041f8_add_rating_count_min_to_user_settings.py  4fe736cc9c1c_add_junction_table_indexes_for_query_.py  6b499b328700_add_sync_stats_columns_to_sync_run.py
docker/app/: Dockerfile  crontab  entrypoint.sh
docker/dev/: Dockerfile
docs/: Current Development State.md  Detailed Development Plan v2.md
docs/design/: Phase-15-plan.md
docs/status/: Phase-15-status.md
static/css/: style.css
templates/: base.html  catalog.html
templates/admin/: base.html  dashboard.html
tests/: conftest.py
tests/fixtures/: genres.json
tests/integration/: test_bulk_sync.py  test_bulk_sync_endpoints.py
tests/unit/: test_admin_panel.py  test_auth_controller.py  (+19 more)
(+2 files in other folders)
