[tool.poetry]
name = "litres-advanced-filters"
version = "1.0.3"
description = "Personal web app extending LitRes filtering for audiobooks"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
flask = "^3.1"
gunicorn = "^23"
httpx = "^0.28"
beautifulsoup4 = "^4.12"
sqlalchemy = "^2.0"
alembic = "^1.14"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.4"
pytest = "^9.0.2"
respx = "^0.22.0"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that hit real LitRes (run with -m integration)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
